--- a/src/components/Register/UsernameForm/style.scss
+++ b/src/components/Register/UsernameForm/style.scss
@@ -2,6 +2,9 @@
   .sub-title-username {
     margin-top: 25px;
   }
+  .btn-auth.btn-primary {
+    color: #e21a22 !important;
+  }
 }
 
 .pin {
